takamaka_examples/src/takamaka/tests/errors/illegalstaticinitialization1/C.java
package takamaka.tests.errors.illegalstaticinitialization1;

public class C {
	public static int i = 13; // illegal without final
}